--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>cards</title>
 	<link rel="stylesheet" type="text/css" href="cards.css">
+	<link rel="stylesheet" type="text/css" href="https://www.pexels.com/search/background%20image/">
 </head>
 <body>
 	<div class="card">
