--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta  name="viewport" content="width=device-width ,initial-scale=1">
 	<title>homepage</title>
 	<link rel="stylesheet" type="text/css" href="edit.css">
 	<link rel="stylesheet" type="text/css" href="https://www.pexels.com/search/login%20background/">
