--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+
 	<meta  name="viewport" content="width=device-width ,initial-scale=1">
 	<title>homepage</title>
 	<link rel="stylesheet" type="text/css" href="edit.css">
@@ -12,7 +12,7 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="logo.png">
+				<img src="LOGO.png">
 			</div>
 			<ul>
 				<li class="active"><a href="#"><b>Home</b></a></li>
